examples/test/testpolicy14672.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14672
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key33: value3
      key7: value44
      key34: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value45
          key16: value45
          key4: value22
      podSelector:
        matchLabels:
          key33: value25
          key36: value48
